# simple-url-shortener

./: Cargo.toml  LICENSE  README.md  body.txt  script.rs  swarm.sh  url_generation.sh  urls.txt
.sqlx/: query-05060e14c16858e5278891faf5313ca8b676c890dc985eb65ee49d4e271634f2.json  query-2d0cdf186a49213c23c6e96092b95f69f7fccf9015f8d2b608dbacc9d8d26401.json  query-3cdb340ee6c8ad87e0d949a317a228481a881699893abe4046f1398da0ae6c6b.json  query-4ba30ea616b5d12e84bd2357e396f3eaafe5eee4fb81eec7fcc5b106f337b1cd.json  query-58487261737ecca4c863c3b7c7533a4754d921dee69736dc05c7ce161dd7a67f.json  query-61ccd20aeb54b91375f4872491903056c5ea5763a0c850bc68226ef11ce73179.json  query-96be62157664776f02866d46f5304678788d9cf626d44362f3aadab11fb54f99.json  query-a5e4753e05fe804c302cc94da57025311c428055c7a3cb8b84dc182ec0f0f7ac.json  query-c769b93e13c4247ba2eb381a7d1b9ec568f0ffb0a02757994d8f7ab784966ad6.json  query-ee9daa987a3ba908755e429ddf8029e77cca05d1359f6f32464703e43da14062.json
src/: all_files_output.txt  cache.rs  db.rs  lib.rs  main.rs  service.rs  storage.rs
