[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
log = "0.4.27"
mini-moka = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.4", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.44.2", features = ["full"] }

[profile.pgo]
inherits = "release"
opt-level = 3
panic = 'abort'
codegen-units = 1
lto = true
debug = false
incremental = false
overflow-checks = false
